fix icon align bug

--- a/react-code/src/components/therapists/map.css
+++ b/react-code/src/components/therapists/map.css
@@ -13,7 +13,7 @@ map {
 .pin {
   display: flex;
   align-items: center;
-  width: 180px;
+  width: 20px;
   color: var(--main-blue);
 }
 
@@ -41,5 +41,7 @@ map {
 
   .pin-icon {
     font-size: 10vw;
+    margin-left: -50px;
+    margin-top: -150px;
   }
 }
